--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header/>
-<app-user-input (calculate)="onCalculate($event)"/>
-<app-investment-resuts [results] = "resultsData()"/>
+<app-user-input />
+<app-investment-resuts/>
